--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
         crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-        <link href="css/custom.css" rel="stylesheet" >
+        <link href="custom.css" rel="stylesheet" >
         
         <title>Portfolio | Jon Smith Designs</title>
 </head>
@@ -18,8 +18,8 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-            <img src="jon-smith-title.svg" width="225" height="75" alt="logo for Jon Smith Designs">
-        <span class="d-none">Jon Smith Designs</span>
+            <img src="New Canvas.png" width="150" height="140" alt="logo for Jon Smith Designs">
+        <span class="d-none">Aron Sagnit</span>
         </a>
         <button
         class="navbar-toggler"
@@ -48,10 +48,11 @@
     </div>
     </nav>
     </div>
+
+
 <main>
-    <header style="background-image: url('images/index-image.jpg')">
-        <div class="color-overlay d-flex justify-content-center align-items-center"> 
-             <h1>Interiror Design & decorating</h1>
+        <h1>MY NAME IS A'RON SAGNIT</h1>
+        <h2>AND I AM A WEB DESIGNER</h2>
          </div>
     </header>
     <div class="singleCol mx-auto my-5">
@@ -70,6 +71,8 @@
         
     </div>
 </main>
+
+
 <footer class="py-5">
     <div class="d-flex flex-row justify-content-center">
         <a href="https://www.facebook.com/profile.php?id=100056629069834" class="me-4">
