--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Bootstrap CSS -->
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
         crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
         <link href="custom.css" rel="stylesheet" >
         
-        <title>Portfolio | Jon Smith Designs</title>
+        <title>Portfolio | A'ron Sagnit</title>
+
+
 </head>
 <body>
+    <header class="navy">
     <div class="container px-0">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-            <img src="New Canvas.png" width="150" height="140" alt="logo for Jon Smith Designs">
+            <img class="dp" src="logoS.jpg" width="90" height="90" alt="logo for Jon Smith Designs">
         <span class="d-none">Aron Sagnit</span>
+        <!-- <span class="titledp">A'ron Sagnit</span> -->
         </a>
+
         <button
         class="navbar-toggler"
         type="button"
@@ -48,24 +54,19 @@
     </div>
     </nav>
     </div>
-
+</header>
 
 <main>
-        <h1>MY NAME IS A'RON SAGNIT</h1>
-        <h2>AND I AM A WEB DESIGNER</h2>
+    <header id="codinggif" style="background-image: url('coding.gif');">
+        <div class="color-overlay d-flex justify-content-center align-items-center">
+            <h1 class="namecenter">A'RON SAGNIT <span class="red-slash">//</span> WEB DESIGNER</h1>
          </div>
     </header>
     <div class="singleCol mx-auto my-5">
         <div class="container">
-            <h2 class="text-center">I'll make your room look amazing</h2>
+            <h2 id="exq" class="text-center">I Design Websites Exquisitely</h2>
             <p class="lead">
-               freestar Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempus nibh consequat urna consequat placerat. Vivamus bibendum feugiat nibh condimentum consequat. Aliquam a ex vitae.
-        </p>
-        <p>
-             freestar Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempus nibh consequat urna consequat placerat. Vivamus bibendum feugiat nibh condimentum consequat. Aliquam a ex vitae.
-        </p>
-        <p>
-             freestar Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempus nibh consequat urna consequat placerat. Vivamus bibendum feugiat nibh condimentum consequat. Aliquam a ex vitae.
+                As a seasoned web designer, I bring a wealth of experience and creativity to every project. With a keen eye for aesthetics and a deep understanding of user experience, I specialize in crafting visually stunning and intuitively functional websites. My skills encompass the latest design trends, front-end technologies, and responsive frameworks, ensuring that each website I create not only looks impressive but also performs seamlessly across various devices.
         </p>
         </div>
         
