--- a/portfolio.html
+++ b/portfolio.html
@@ -14,40 +14,44 @@
         <title>Portfolio | Jon Smith Designs</title>
 </head>
 <body>
-    <div class="container px-0">
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-            <img src="jon-smith-title.svg" width="225" height="75" alt="logo for Jon Smith Designs">
-        <span class="d-none">Jon Smith Designs</span>
-        </a>
-        <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle Navigation"
-        >
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto text-center">
-                <li class="nav-item">
-                    <a href="about.html" class="nav-link">About</a>
-                </li>
-
-                <li class="nav-item">
-                    <a href="portfolio.html" class="nav-link">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
-                </li>
-            </ul>
-    </div>
-    </nav>
-    </div>
+    <header class="navy">
+        <div class="container px-0">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                <img class="dp" src="logoS.jpg" width="90" height="90" alt="logo for Jon Smith Designs">
+            <span class="d-none">Aron Sagnit</span>
+            <!-- <span class="titledp">A'ron Sagnit</span> -->
+            </a>
+    
+            <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle Navigation"
+            >
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto text-center">
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link">About</a>
+                    </li>
+    
+                    <li class="nav-item">
+                        <a href="portfolio.html" class="nav-link">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+        </div>
+        </nav>
+        </div>
+    </header>
 <main>
   <div class="container my-3 py-md-4">
     <h1>My Portfolio</h1>
@@ -101,6 +105,8 @@
    </div>
   </div>
 </main>
+
+
 <footer class="py-5">
     <div class="d-flex flex-row justify-content-center">
         <a href="https://www.facebook.com/profile.php?id=100056629069834" class="me-4">
