--- a/portfolio.html
+++ b/portfolio.html
@@ -56,17 +56,19 @@
   <div class="container my-3 py-md-4">
     <h1>My Portfolio</h1>
        <div class="row mt-1 g-2 g-md-3">
+
+
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card">
-                <img src="dining-room-smaller.jpg" alt="shit" class="card-img-top">
+                <img src="david.jpg" alt="shit" class="card-img-top">
                 <div class="card-body">
                 <h5 class="card-title">
-                    Dining Room
+                    Cartoon Website
                 </h5>
                 <p class="card-text">
-                    freestar Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempus nibh consequat urna consequat placerat. Vivamus bibendum feugiat nibh condimentum consequat. Aliquam a ex vitae
+                    In this website I created a webpage all about David Martinez from CyberPunk: EdgeRunners.
                 </p>
-                <a href="#" class="btn btn-outline-dark">Learn More!</a>
+                <a href="https://aronsagnit.github.io/WS02-MID1/" class="btn btn-outline-dark">Learn More!</a>
             </div>
             </div>
         </div>
