--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
         <link href="custom.css" rel="stylesheet" >
         
-        <title>About | Jon Smith Designs</title>
+        <title>About | A'ron Sagnit</title>
 </head>
 <body>
     <header class="navy">
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto text-center">
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
+                        <a href="about.html" class="nav-link active">About</a>
                     </li>
     
                     <li class="nav-item">
@@ -55,18 +55,18 @@
 <main>
    <div class="singleCol mx-auto my-2 my-md-4">
     <div class="container overflow-hidden">
-       <h1>About Jon Smith</h1>
+       <h1>About A'ron Sagnit</h1>
        <p class="lead">
-               freestar Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempus nibh consequat urna consequat placerat. Vivamus bibendum feugiat nibh condimentum consequat. Aliquam a ex vitae.
+        As a dedicated web development professional, I take pride in transforming ideas into engaging digital experiences. With a solid foundation in HTML, CSS, and JavaScript, I specialize in creating responsive and visually appealing websites.
         </p>
       <p class="text-center">
-          <img src="pfp.jpg" width="300" height="300" alt="" class="float-sm-none float-md-end">
+        <img id="profilepic" src="pfp.jpg" width="300" height="300" alt="" class="float-sm-none float-md-end rounded-circle">
       </p>  
         <p>
-             freestar Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempus nibh consequat urna consequat placerat. Vivamus bibendum feugiat nibh condimentum consequat. Aliquam a ex vitae.
+            My passion for clean and efficient code, coupled with a keen eye for design, allows me to craft user-friendly interfaces that leave a lasting impression. Whether it's building dynamic web applications or optimizing website performance, I am committed to delivering solutions that exceed client expectations. 
         </p>
         <p>
-             freestar Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempus nibh consequat urna consequat placerat. Vivamus bibendum feugiat nibh condimentum consequat. Aliquam a ex vitae.
+             Explore my portfolio to see a showcase of my projects, each a testament to my commitment to innovation and excellence in the world of web development.
         </p>
    </div>
 </div>
